--- a/src/components/Banner/style.module.css
+++ b/src/components/Banner/style.module.css
@@ -51,10 +51,12 @@
   transform: translateX(-50%) translateY(-30%);
   display: flex;
 }
-.buttonDiv {
+.buttonDiv1 {
   display: flex;
 }
-
+.buttonDiv2 {
+  display: flex;
+}
 
 .button1 {
   background-color: #696f45;
