--- a/src/components/Logo/style.module.css
+++ b/src/components/Logo/style.module.css
@@ -4,7 +4,12 @@
   grid-template-rows: 1fr;
   grid-column: 1/2;
 }
-.divs {
+.div1 {
+  display: flex;
+  align-items: center;
+  padding-right: 50px;
+}
+.div2 {
   display: flex;
   align-items: center;
   padding-right: 50px;
